--- a/contact.html
+++ b/contact.html
@@ -406,41 +406,11 @@
         </div>
     </main>
 
-    <footer>
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-section">
-                    <h4>Products</h4>
-                    <p><a href="#">Web Templates</a></p>
-                    <p><a href="#">Mobile Apps</a></p>
-                    <p><a href="#">Design Assets</a></p>
-                    <p><a href="#">Software Tools</a></p>
-                </div>
-                <div class="footer-section">
-                    <h4>Company</h4>
-                    <p><a href="#">About Us</a></p>
-                    <p><a href="#">Our Team</a></p>
-                    <p><a href="#">Careers</a></p>
-                    <p><a href="#">Blog</a></p>
-                </div>
-                <div class="footer-section">
-                    <h4>Support</h4>
-                    <p><a href="#">Help Center</a></p>
-                    <p><a href="#">Documentation</a></p>
-                    <p><a href="contact.html">Contact</a></p>
-                    <p><a href="#">Community</a></p>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; <span id="currentYear">2024</span> Bobit. All rights reserved.</p>
-            </div>
-        </div>
-    </footer>
+    <!-- Footer will be loaded here -->
+    <div id="footer-container"></div>
 
+    <script src="footer.js"></script>
     <script>
-        // Set current year in footer
-        document.getElementById('currentYear').textContent = new Date().getFullYear();
-
         // Form submission handler (handles real email sending via FormSubmit)
         document.getElementById('contactForm').addEventListener('submit', function(e) {
             // Let the form submit naturally to FormSubmit
