About me page done right

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - Bobit</title>
+    <title>About - Bobit</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -32,80 +32,110 @@
 
     <main>
         <div class="container">
-            <section class="contact-hero">
-                <h1>Get in Touch</h1>
-                <p>Have a question or want to work together? We'd love to hear from you. Send us a message and we'll respond as soon as possible.</p>
+            <!-- About Hero Section -->
+            <section class="hero">
+                <h1>⚡ About Me</h1>
+                <p>Digital builder, product flipper, and full-time problem solver</p>
             </section>
 
-            <div class="contact-content">
-                <div class="contact-form">
-                    <h2>Send us a Message</h2>
-                    <form id="contactForm" target="_blank" action="https://formsubmit.co/bobitdigital@gmail.com" method="POST">
-                        <div class="form-group">
-                            <label for="name">Full Name</label>
-                            <input type="text" id="name" name="name" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="email">Email Address</label>
-                            <input type="email" id="email" name="email" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="subject">Subject</label>
-                            <input type="text" id="subject" name="subject" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="message">Message</label>
-                            <textarea id="message" name="message" placeholder="Tell us about your project or inquiry..." required></textarea>
-                        </div>
-                        <!-- Hidden fields for FormSubmit -->
-                        <input type="hidden" name="_subject" value="New contact form submission from Bobit website">
-                        <input type="hidden" name="_next" value="https://www.bobit.hr/thank_you.html">
-                        <input type="hidden" name="_captcha" value="false">
-                        <input type="hidden" name="_template" value="table">
-                        <button type="submit" class="submit-btn">Send Message</button>
-                    </form>
+            <!-- Introduction Section -->
+            <section class="about-intro">
+                <div class="intro-content">
+                    <div class="intro-text">
+                        <h2>Hey, I'm Borna</h2>
+                        <p>I create fast, lean digital tools that help hustlers launch faster, sell smarter, and stay organized using Notion, Canva, and simple execution systems.</p>
+                        <p>I don't just talk about digital income, I live it. Every product I build is something I'd use (or already do) to make money online.</p>
+                    </div>
+                    <div class="intro-image">
+                        <img src="borna.jpg" alt="Borna" class="profile-photo">
+                    </div>
                 </div>
+            </section>
 
-                <div class="contact-info">
-                    <h2>Contact Information</h2>
-                    
-                    <div class="info-item">
-                        <h3>📧 Email</h3>
-                        <p>bobitdigital@gmail.com</p>
-                    </div>
+            <!-- What I Do Section -->
+            <section class="what-i-do-section">
+                <div class="what-i-do-content">
+                    <h2>💼 What I Do</h2>
+                    <div class="what-i-do-list">
+                        <div class="what-i-do-item">
+                            <h3>Build Notion Systems</h3>
+                            <p>for solopreneurs and freelancers</p>
+                        </div>
+                        <div class="what-i-do-item">
+                            <h3>Create Digital Products</h3>
+                            <p>that sell themselves</p>
+                        </div>
+                        <div class="what-i-do-item">
+                            <h3>Automate Hustles</h3>
+                            <p>using simple tools + clear systems</p>
+                        </div>
+                        <div class="what-i-do-item">
+                            <h3>Help People Execute Faster</h3>
+                            <p>with no fluff</p>
+                        </div>
 
-                    <div class="info-item">
-                        <h3>📞 Phone</h3>
-                        <p>+385 (91) 565-8461</p>
-                    </div>
+                        <div class="what-i-do-item">
+                            <h3>Mobile application consulting</h3>
+                            <p>bleeding edge technologies</p>
+                        </div>
 
-                    <div class="info-item">
-                        <h3>📍 Address</h3>
-                        <p>Trnsko 42a<br>
-                        10020 Zagreb<br>
-                        Croatia</p>
+                        <div class="what-i-do-item">
+                            <h3>Entrepreneur advice</h3>
+                            <p>Become a swiss army knife</p>
+                        </div>
                     </div>
-
-                    <div class="info-item">
-                        <h3>🕒 Business Hours</h3>
-                        <p>Monday - Friday: 9:00 AM - 6:00 PM<br>
-                        Saturday: 10:00 AM - 4:00 PM<br>
-                        Sunday: Closed</p>
-                    </div>
-                    <!--
-                    <div class="social-links">
-                        <a href="#" class="social-link">📘</a>
-                        <a href="#" class="social-link">🐦</a>
-                        <a href="#" class="social-link">💼</a>
-                        <a href="#" class="social-link">📷</a>
-                    </div>
-                    -->
                 </div>
-            </div>
+            </section>
+
+            <!-- Why I Built This Section -->
+            <section class="why-section">
+                <div class="why-content">
+                    <h2>🧠 Why I Built This</h2>
+                    <p>I've been broke, tired, and forced to figure it out.</p>
+                    <p>Now I help others get focused, build simple assets, and earn on their own terms.</p>
+                    <p>Everything here was built from that mindset, and you can start using it today.</p>
+                </div>
+            </section>
+
+            <!-- Values & Philosophy -->
+            <section class="values-section">
+                <h2>My Values</h2>
+                <div class="values-grid">
+                    <div class="value-card">
+                        <div class="value-icon">🎯</div>
+                        <h3>Quality First</h3>
+                        <p>I believe in delivering exceptional quality in every project, paying attention to details that matter</p>
+                    </div>
+                    <div class="value-card">
+                        <div class="value-icon">🤝</div>
+                        <h3>Collaboration</h3>
+                        <p>Great things happen when we work together. I value open communication and teamwork</p>
+                    </div>
+                    <div class="value-card">
+                        <div class="value-icon">💡</div>
+                        <h3>Innovation</h3>
+                        <p>Constantly learning and exploring new technologies to stay ahead of the curve</p>
+                    </div>
+                    <div class="value-card">
+                        <div class="value-icon">🌱</div>
+                        <h3>Growth Mindset</h3>
+                        <p>Every challenge is an opportunity to learn and improve. I embrace continuous learning</p>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Call to Action -->
+            <section class="about-cta">
+                <h2>Let's Work Together</h2>
+                <p>Ready to bring your digital vision to life? I'd love to hear about your project and explore how we can collaborate.</p>
+                <div class="cta-buttons">
+                    <a href="contact.html" class="btn btn-primary">Get In Touch</a>
+                    <a href="index.html" class="btn btn-secondary">View My Work</a>
+                </div>
+            </section>
         </div>
     </main>
 
-    <!-- Footer will be loaded here -->
     <div id="footer-container"></div>
 
     <script src="footer.js"></script>
