product details and first product

--- a/products.html
+++ b/products.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bobit - Premium Digital Products</title>
+    <title>All Products - Bobit</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
@@ -14,15 +14,10 @@
     <div id="header-container"></div>
 
     <main>
-        <div class="container">
-            <section class="hero">
-                <h1>Premium Digital Products</h1>
-                <p>Transform your business with our cutting-edge digital solutions. From software tools to creative assets, we deliver excellence in every product.</p>
-                <a href="products.html" class="cta-button">Explore All Products</a>
-            </section>
-
-            <section id="products" class="products-section">
-                <h2>Most popular products 🔥</h2>
+        <!-- Products Section -->
+        <section id="all-products" class="products-section">
+            <div class="container">
+                <h2>All Available Products 🔥</h2>
                 <div class="products-grid">
                     <div class="product-card">
                         <div class="product-icon">🚀</div>
@@ -46,26 +41,38 @@
                         <a href="#" class="product-cta">Coming Soon</a>
                     </div>
                 </div>
-            </section>
+            </div>
+        </section>
 
-            <section class="features">
-                <div class="feature-card">
-                    <div class="feature-icon">🚀</div>
-                    <h3>High Performance</h3>
-                    <p>Our digital products are optimized for speed and efficiency, ensuring your business operates at peak performance.</p>
+        <!-- Coming Soon Section -->
+        <section class="coming-soon-section">
+            <div class="container">
+                <div class="coming-soon-content">
+                    <h2>🔮 What's Coming Next</h2>
+                    <p>We're constantly building new products to help you succeed online. Here's what's in the pipeline:</p>
+                    <div class="coming-soon-grid">
+                        <div class="coming-soon-item">
+                            <div class="coming-soon-icon">🎯</div>
+                            <h3>Sales Funnel Builder</h3>
+                            <p>Drag-and-drop funnel builder with high-converting templates</p>
+                            <span class="release-date">Q2 2025</span>
+                        </div>
+                        <div class="coming-soon-item">
+                            <div class="coming-soon-icon">📊</div>
+                            <h3>Social Media Planner</h3>
+                            <p>Complete content planning and scheduling system for all platforms</p>
+                            <span class="release-date">Q3 2025</span>
+                        </div>
+                        <div class="coming-soon-item">
+                            <div class="coming-soon-icon">🤖</div>
+                            <h3>AI Content Generator</h3>
+                            <p>AI-powered content creation tool for blogs, social media, and marketing</p>
+                            <span class="release-date">Q4 2025</span>
+                        </div>
+                    </div>
                 </div>
-                <div class="feature-card">
-                    <div class="feature-icon">🎨</div>
-                    <h3>Creative Excellence</h3>
-                    <p>Beautiful, professional designs that capture your brand's essence and engage your audience effectively.</p>
-                </div>
-                <div class="feature-card">
-                    <div class="feature-icon">🔧</div>
-                    <h3>Easy Integration</h3>
-                    <p>Seamlessly integrate our products into your existing workflow with comprehensive documentation and support.</p>
-                </div>
-            </section>
-        </div>
+            </div>
+        </section>
     </main>
 
     <!-- Footer will be loaded here -->
