done with products overview

--- a/about.html
+++ b/about.html
@@ -113,7 +113,7 @@
                 <p>Ready to bring your digital vision to life? I'd love to hear about your project and explore how we can collaborate.</p>
                 <div class="cta-buttons">
                     <a href="contact.html" class="btn btn-primary">Get In Touch</a>
-                    <a href="index.html" class="btn btn-secondary">View My Work</a>
+                    <a href="products.html" class="btn btn-secondary">View My Work</a>
                 </div>
             </section>
         </div>
