--- a/hustle-hub-os.html
+++ b/hustle-hub-os.html
@@ -1,134 +1,200 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hustle Hub OS - Bobit</title>
-    <link rel="icon" type="image/svg+xml" href="favicon.svg">
-    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <!-- Header will be loaded here -->
     <div id="header-container"></div>
 
     <main>
-        <div class="container">
-            <!-- Hero Section -->
-            <section class="hero">
-                <div class="product-badge">🚀 DIGITAL PRODUCT</div>
-                <h1>Hustle Hub OS</h1>
-                <p class="hero-subtitle">
-                    The only Notion system you need to stay focused, sell smarter, and make money online faster.
-                </p>
-                <p class="hero-description">
-                    Built for solopreneurs, freelancers, and digital hustlers who want to execute, not overthink.
-                </p>
-                <div class="hero-buttons">
-                    <a href="#pricing" class="cta-button primary">Get Instant Access</a>
-                    <a href="#features" class="cta-button secondary">See What's Inside</a>
-                </div>
-            </section>
+      <div class="container">
+        <!-- Hero Section -->
+        <section class="hero">
+          <div class="product-badge">🚀 DIGITAL PRODUCT</div>
+          <h1>Hustle Hub OS</h1>
+          <p class="hero-subtitle">
+            The only Notion system you need to stay focused, sell smarter, and make money online faster.
+          </p>
+          <p class="hero-description">
+            Built for solopreneurs, freelancers, and digital hustlers who want to execute, not overthink.
+          </p>
+          <div class="hero-buttons">
+            <a href="#pricing" class="cta-button primary">Get Instant Access</a>
+            <a href="#features" class="cta-button secondary">See What's Inside</a>
+          </div>
+        </section>
 
-            <!-- Target Audience Section -->
-            <section class="target-audience">
-                <div class="container">
-                    <h2 class="section-title">🧠 Built for People Who:</h2>
-                    <div class="audience-grid">
-                        <div class="audience-item">
-                            <div class="check-icon">✅</div>
-                            <p>Are tired of "learning" and want to start earning</p>
-                        </div>
-                        <div class="audience-item">
-                            <div class="check-icon">✅</div>
-                            <p>Want a clean system to execute daily</p>
-                        </div>
-                        <div class="audience-item">
-                            <div class="check-icon">✅</div>
-                            <p>Need to track leads, offers, and content without bouncing between apps</p>
-                        </div>
-                        <div class="audience-item">
-                            <div class="check-icon">✅</div>
-                            <p>Are launching a digital product or service this week</p>
-                        </div>
-                    </div>
-                </div>
-            </section>
+        <!-- Target Audience Section -->
+        <section class="target-audience">
+          <div class="container">
+            <h2 class="section-title">🧠 Built for People Who:</h2>
+            <div class="audience-grid">
+              <div class="audience-item">
+                <div class="check-icon">✅</div>
+                <p>Are tired of "learning" and want to start earning</p>
+              </div>
+              <div class="audience-item">
+                <div class="check-icon">✅</div>
+                <p>Want a clean system to execute daily</p>
+              </div>
+              <div class="audience-item">
+                <div class="check-icon">✅</div>
+                <p>Need to track leads, offers, and content without bouncing between apps</p>
+              </div>
+              <div class="audience-item">
+                <div class="check-icon">✅</div>
+                <p>Are launching a digital product or service this week</p>
+              </div>
+            </div>
+          </div>
+        </section>
 
-            <!-- Product Screenshots Section -->
-            <section class="product-visuals">
-                <div class="container">
-                    <h2 class="section-title">📸 See It In Action</h2>
-                    <div class="visuals-grid">
-                        <div class="visual-item">
-                            <div class="screenshot-placeholder">
-                                <div class="placeholder-content">
-                                    <div class="placeholder-icon">📊</div>
-                                    <h4>Daily Dashboard</h4>
-                                    <p>Screenshot of the Daily Execution Dashboard</p>
-                                </div>
-                            </div>
-                            <h4>Your Command Center</h4>
-                            <p>Clean, focused dashboard to plan and execute your daily hustle</p>
-                        </div>
-                        <div class="visual-item">
-                            <div class="screenshot-placeholder">
-                                <div class="placeholder-content">
-                                    <div class="placeholder-icon">📱</div>
-                                    <h4>DM Tracker</h4>
-                                    <p>Screenshot of the DM Tracker table</p>
-                                </div>
-                            </div>
-                            <h4>Outreach Made Simple</h4>
-                            <p>Track every prospect, follow-up, and deal in one organized table</p>
-                        </div>
-                        <div class="visual-item">
-                            <div class="screenshot-placeholder">
-                                <div class="placeholder-content">
-                                    <div class="placeholder-icon">📱</div>
-                                    <h4>Mobile Ready</h4>
-                                    <p>Works perfectly on mobile for hustle on-the-go</p>
-                                </div>
-                            </div>
-                            <h4>Hustle Anywhere</h4>
-                            <p>Access your entire system from any device, anytime</p>
-                        </div>
-                    </div>
+        <!-- Product Screenshots Section -->
+        <section class="product-visuals">
+          <div class="container">
+            <h2 class="section-title">📸 See It In Action</h2>
+            <div class="visuals-grid">
+              <div class="visual-item">
+                <div class="screenshot-placeholder">
+                  <div class="placeholder-content">
+                    <div class="placeholder-icon">📊</div>
+                    <h4>Daily Dashboard</h4>
+                    <p>Screenshot of the Daily Execution Dashboard</p>
+                  </div>
                 </div>
-            </section>
+                <h4>Your Command Center</h4>
+                <p>Clean, focused dashboard to plan and execute your daily hustle</p>
+              </div>
+              <div class="visual-item">
+                <div class="screenshot-placeholder">
+                  <div class="placeholder-content">
+                    <div class="placeholder-icon">📱</div>
+                    <h4>DM Tracker</h4>
+                    <p>Screenshot of the DM Tracker table</p>
+                  </div>
+                </div>
+                <h4>Outreach Made Simple</h4>
+                <p>Track every prospect, follow-up, and deal in one organized table</p>
+              </div>
+              <div class="visual-item">
+                <div class="screenshot-placeholder">
+                  <div class="placeholder-content">
+                    <div class="placeholder-icon">📱</div>
+                    <h4>Mobile Ready</h4>
+                    <p>Works perfectly on mobile for hustle on-the-go</p>
+                  </div>
+                </div>
+                <h4>Hustle Anywhere</h4>
+                <p>Access your entire system from any device, anytime</p>
+              </div>
+            </div>
+          </div>
+        </section>
 
-            <!-- Video Section -->
-            <section class="video-section">
-                <div class="container">
-                    <h2 class="section-title">🎥 See How It Works</h2>
-                    <div class="video-container">
-                        <div class="video-placeholder">
-                            <div class="video-content">
-                                <div class="play-button">▶️</div>
-                                <h3>30-Second Walkthrough</h3>
-                                <p>"Hey, here's the system I use to track my offers, build products, and stay focused. You can copy it in 2 clicks."</p>
-                            </div>
-                        </div>
-                    </div>
+        <!-- Pricing Section -->
+        <section id="pricing" class="pricing-section">
+          <div class="container">
+            <h2 class="section-title">👇 Simple Pricing</h2>
+            <p class="pricing-subtitle">Choose the package that fits your hustle</p>
+            <div class="pricing-grid">
+              <div class="pricing-card">
+                <div class="pricing-header">
+                  <h3>Starter</h3>
+                  <div class="price">$17</div>
                 </div>
-            </section>
+                <div class="pricing-features">
+                  <h4>Core Templates</h4>
+                  <ul>
+                    <li>✅ Daily Execution Dashboard</li>
+                    <li>✅ DM Tracker</li>
+                    <li>✅ Offer Builder</li>
+                    <li>✅ Basic Content Vault</li>
+                  </ul>
+                </div>
+                <a href="#" class="pricing-button">Get Started</a>
+              </div>
+              <div class="pricing-card featured">
+                <div class="popular-badge">🔥 MOST POPULAR</div>
+                <div class="pricing-header">
+                  <h3>Pro Hustler</h3>
+                  <div class="price">$47</div>
+                </div>
+                <div class="pricing-features">
+                  <h4>All Templates + Bonuses</h4>
+                  <ul>
+                    <li>✅ Everything in Starter</li>
+                    <li>✅ Micro Product Builder</li>
+                    <li>✅ Advanced Content Vault</li>
+                    <li>✅ One-Pager Generator</li>
+                    <li>✅ Exclusive Video Tutorials</li>
+                    <li>✅ Priority Support</li>
+                  </ul>
+                </div>
+                <a href="#" class="pricing-button primary">Start Hustling</a>
+              </div>
+              <div class="pricing-card">
+                <div class="pricing-header">
+                  <h3>Resell Kit</h3>
+                  <div class="price">$97</div>
+                </div>
+                <div class="pricing-features">
+                  <h4>Pro + Resell Rights</h4>
+                  <ul>
+                    <li>✅ Everything in Pro Hustler</li>
+                    <li>✅ Full Resell Rights</li>
+                    <li>✅ Sales Page Template</li>
+                    <li>✅ Marketing Materials</li>
+                    <li>✅ 100% Profit on Sales</li>
+                  </ul>
+                </div>
+                <a href="#" class="pricing-button">License to Sell</a>
+              </div>
+            </div>
+          </div>
+        </section>
 
-            <!-- Final CTA Section -->
-            <section class="final-cta">
-                <div class="container">
-                    <div class="cta-content">
-                        <h2>💥 Start executing with Hustle Hub OS today</h2>
-                        <p>Get instant access, no fluff — just a Notion system that works.</p>
-                        <p class="tagline">Execution beats overthinking. Hustle smarter with a system built to move fast.</p>
-                        <div class="cta-buttons">
-                            <a href="#pricing" class="cta-button primary large">Get Instant Access - $47</a>
-                            <p class="guarantee">💯 30-day money-back guarantee</p>
-                        </div>
-                    </div>
+        <!-- Video Section -->
+        <section class="video-section">
+          <div class="container">
+            <h2 class="section-title">🎥 See How It Works</h2>
+            <div class="video-container">
+              <div class="video-placeholder">
+                <div class="video-content">
+                  <div class="play-button">▶️</div>
+                  <h3>30-Second Walkthrough</h3>
+                  <p>
+                    "Hey, here's the system I use to track my offers, build products, and stay focused. You can copy it in 2 clicks."
+                  </p>
                 </div>
-            </section>
-        </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- Final CTA Section -->
+        <section class="final-cta">
+          <div class="container">
+            <div class="cta-content">
+              <h2>💥 Start executing with Hustle Hub OS today</h2>
+              <p>Get instant access, no fluff — just a Notion system that works.</p>
+              <p class="tagline">
+                Execution beats overthinking. Hustle smarter with a system built to move fast.
+              </p>
+              <div class="cta-buttons">
+                <a href="#pricing" class="cta-button primary large">Get Instant Access - $47</a>
+                <p class="guarantee">💯 30-day money-back guarantee</p>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
     </main>
 
     <!-- Footer will be loaded here -->
@@ -137,5 +203,5 @@
     <script src="header.js"></script>
     <script src="footer.js"></script>
     <script src="main.js"></script>
-</body>
+  </body>
 </html>
