--- a/products.html
+++ b/products.html
@@ -14,6 +14,7 @@
     <div id="header-container"></div>
 
     <main>
+        <div class="container">
         <!-- Products Section -->
         <section id="all-products" class="products-section">
             <div class="container">
@@ -73,6 +74,7 @@
                 </div>
             </div>
         </section>
+    </div>
     </main>
 
     <!-- Footer will be loaded here -->
