adjust pdp style some morež

--- a/hustle-hub-os.html
+++ b/hustle-hub-os.html
@@ -57,7 +57,7 @@
         </section>
 
         <!-- Product Screenshots Section -->
-        <section class="product-visuals">
+        <section id="features" class="product-visuals">
           <div class="container">
             <h2 class="section-title">📸 See It In Action</h2>
             <div class="visuals-grid">
@@ -96,6 +96,24 @@
               </div>
             </div>
           </div>
+        </section>
+
+        <!-- Video Section -->
+        <section class="video-section">
+            <div class="container">
+              <h2 class="section-title">🎥 See how it works</h2>
+              <div class="video-container">
+                <div class="video-placeholder">
+                  <div class="video-content">
+                    <div class="play-button">▶️</div>
+                    <h3>30-Second Walkthrough</h3>
+                    <p>
+                      "Hey, here's the system I use to track my offers, build products, and stay focused. You can copy it in 2 clicks."
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
         </section>
 
         <!-- Pricing Section -->
@@ -160,41 +178,22 @@
           </div>
         </section>
 
-        <!-- Video Section -->
-        <section class="video-section">
-          <div class="container">
-            <h2 class="section-title">🎥 See How It Works</h2>
-            <div class="video-container">
-              <div class="video-placeholder">
-                <div class="video-content">
-                  <div class="play-button">▶️</div>
-                  <h3>30-Second Walkthrough</h3>
-                  <p>
-                    "Hey, here's the system I use to track my offers, build products, and stay focused. You can copy it in 2 clicks."
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
-
         <!-- Final CTA Section -->
         <section class="final-cta">
           <div class="container">
             <div class="cta-content">
               <h2>💥 Start executing with Hustle Hub OS today</h2>
-              <p>Get instant access, no fluff — just a Notion system that works.</p>
+              <p>Get instant access, no fluff, just a Notion system that works.</p>
               <p class="tagline">
                 Execution beats overthinking. Hustle smarter with a system built to move fast.
               </p>
               <div class="cta-buttons">
                 <a href="#pricing" class="cta-button primary large">Get Instant Access - $47</a>
-                <p class="guarantee">💯 30-day money-back guarantee</p>
               </div>
             </div>
           </div>
         </section>
-    </div>
+      </div>
     </main>
 
     <!-- Footer will be loaded here -->
