add test payment link

--- a/hustle-hub-os.html
+++ b/hustle-hub-os.html
@@ -100,20 +100,20 @@
 
         <!-- Video Section -->
         <section class="video-section">
-            <div class="container">
-              <h2 class="section-title">🎥 See how it works</h2>
-              <div class="video-container">
-                <div class="video-placeholder">
-                  <div class="video-content">
-                    <div class="play-button">▶️</div>
-                    <h3>30-Second Walkthrough</h3>
-                    <p>
-                      "Hey, here's the system I use to track my offers, build products, and stay focused. You can copy it in 2 clicks."
-                    </p>
-                  </div>
+          <div class="container">
+            <h2 class="section-title">🎥 See how it works</h2>
+            <div class="video-container">
+              <div class="video-placeholder">
+                <div class="video-content">
+                  <div class="play-button">▶️</div>
+                  <h3>30-Second Walkthrough</h3>
+                  <p>
+                    "Hey, here's the system I use to track my offers, build products, and stay focused. You can copy it in 2 clicks."
+                  </p>
                 </div>
               </div>
             </div>
+          </div>
         </section>
 
         <!-- Pricing Section -->
@@ -136,7 +136,7 @@
                     <li>✅ Basic Content Vault</li>
                   </ul>
                 </div>
-                <a href="#" class="pricing-button">Get Started</a>
+                <a href="https://buy.stripe.com/test_bJe6oH2Po779cy2drv1RC00" class="pricing-button">Get Started</a>
               </div>
               <div class="pricing-card featured">
                 <div class="popular-badge">🔥 MOST POPULAR</div>
